syntax = "proto3";

package appointment;

message AppointmentStatus {
    string id = 1; 
    string BusinessNodeId = 2;
    string Status = 3;
    string StatusCode = 4;
    string StatusColor = 5;
    int32 Sequence = 6;
    bool IsCancellationStatus = 7;
    bool SendNotification = 8;
    string NotificationText = 9;
    bool SendSms = 10;
    string SmsText = 11;
    bool IsDashboardStatus = 12;
    bool IsCompletedStatus = 13;
    bool IsWalkinEntryStatus = 14;
    bool IsActive = 15;
  }

message AppointmentStatusCreateModel {
  string BusinessNodeId = 1;
  string Status = 2;
  string StatusCode = 3;
  string StatusColor = 4;
  int32 Sequence = 5;
  bool IsCancellationStatus = 6;
  bool SendNotification = 7;
  string NotificationText = 8;
  bool SendSms = 9;
  string SmsText = 10;
  bool IsDashboardStatus = 11;
  bool IsCompletedStatus = 12;
  bool IsWalkinEntryStatus = 13;
  bool IsActive = 14;
}

message AppointmentStatusGetByIdModel {
    string id = 1; 
}

message AppointmentStatusGetByIdResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Status = 3;
  string StatusCode = 4;
  string StatusColor = 5;
  int32 Sequence = 6;
  bool IsCancellationStatus = 7;
  bool SendNotification = 8;
  string NotificationText = 9;
  bool SendSms = 10;
  string SmsText = 11;
  bool IsDashboardStatus = 12;
  bool IsCompletedStatus = 13;
  bool IsWalkinEntryStatus = 14;
  bool IsActive = 15;
}

message AppointmentStatusCreateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Status = 3;
  string StatusCode = 4;
  string StatusColor = 5;
  int32 Sequence = 6;
  bool IsCancellationStatus = 7;
  bool SendNotification = 8;
  string NotificationText = 9;
  bool SendSms = 10;
  string SmsText = 11;
  bool IsDashboardStatus = 12;
  bool IsCompletedStatus = 13;
  bool IsWalkinEntryStatus = 14;
  bool IsActive = 15;
}

message AppointmentStatusUpdateModel {
  string id = 1; 
  string BusinessNodeId = 2;
  string Status = 3;
  string StatusCode = 4;
  string StatusColor = 5;
  int32 Sequence = 6;
  bool IsCancellationStatus = 7;
  bool SendNotification = 8;
  string NotificationText = 9;
  bool SendSms = 10;
  string SmsText = 11;
  bool IsDashboardStatus = 12;
  bool IsCompletedStatus = 13;
  bool IsWalkinEntryStatus = 14;
  bool IsActive = 15;
}

message AppointmentStatusUpdateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Status = 3;
  string StatusCode = 4;
  string StatusColor = 5;
  int32 Sequence = 6;
  bool IsCancellationStatus = 7;
  bool SendNotification = 8;
  string NotificationText = 9;
  bool SendSms = 10;
  string SmsText = 11;
  bool IsDashboardStatus = 12;
  bool IsCompletedStatus = 13;
  bool IsWalkinEntryStatus = 14;
  bool IsActive = 15;
}

message AppointmentStatusSearchModel {
  string businessNodeId = 1;
}

message AppointmentStatusSearchResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Status = 3;
  string StatusCode = 4;
  string StatusColor = 5;
  int32 Sequence = 6;
  bool IsCancellationStatus = 7;
  bool SendNotification = 8;
  string NotificationText = 9;
  bool SendSms = 10;
  string SmsText = 11;
  bool IsDashboardStatus = 12;
  bool IsCompletedStatus = 13;
  bool IsWalkinEntryStatus = 14;
  bool IsActive = 15;
}

message AppointmentStatusDeleteModel {
    string id = 1;
}

  message AppointmentStatusDeleteResponse {
    string id = 1;
}

service AppointmentStatuses {
    rpc Create(AppointmentStatusCreateModel) returns (AppointmentStatusCreateResponse);
    rpc GetById(AppointmentStatusGetByIdModel) returns (AppointmentStatusGetByIdResponse) {};
    rpc Search(AppointmentStatusSearchModel) returns (AppointmentStatusSearchResponse) {};
    rpc Update(AppointmentStatusUpdateModel) returns (AppointmentStatusUpdateResponse) {};
    rpc Delete(AppointmentStatusDeleteModel) returns (AppointmentStatusDeleteResponse) {};

}